--- a/html/index.html
+++ b/html/index.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> TREMzz </title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
+    </div>
 </body>
 <script href="../js/main.js"></script>
 </html>
