--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
 
         </main>
         <footer class="rodape">
-
+            <button><img src="d"</button>
         </footer>
     </div>
 </body>
