--- a/html/tela10.html
+++ b/html/tela10.html
@@ -8,5 +8,18 @@
 </head>
 <body>
     
+
+
+
+
+
+
+
+
+
+    
+    <footer class="rodape">
+        <button><img src="d"</button>
+    </footer>
 </body>
 </html>
