--- a/html/tela12.html
+++ b/html/tela12.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+
+
+
+
+
+
+
+
+
+
     
+    <footer class="rodape">
+        <button><img src="d"</button>
+    </footer>
 </body>
 </html>
