--- a/html/tela11.html
+++ b/html/tela11.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/tela11.css">
 </head>
 <body>
-    
 
 
 
@@ -17,9 +16,14 @@
 
 
 
-    
+
+
     <footer class="rodape">
-        <button><img src="d"</button>
+        <button><img src="../img/casa.png"></button>
+
+        <button><img src="../img/relogio.png"></button>
+
+        <button><img src="../img/relogio.png"></button>
     </footer>
 </body>
 </html>
