--- a/html/tela8.html
+++ b/html/tela8.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tela 8</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="menu-iphone">
+            <div class="clock">
+                <a>
+                    00:00
+                </a>          
+            </div> <!-- clock -->
+
+            <nav class="tools">
+                <ul>
+
+                </ul>
+            </nav>
+        </div> <!-- menu-iphone-->
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
