att style tela11

--- a/html/tela11.html
+++ b/html/tela11.html
@@ -21,9 +21,12 @@
     <footer class="rodape">
         <button><img src="../img/casa.png"></button>
 
-        <button><img src="../img/relogio.png"></button>
 
-        <button><img src="../img/relogio.png"></button>
+        <div class="relogio">
+            <a href="#">
+                <img src="../img/casa.png" alt="">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
