--- a/html/tela2.html
+++ b/html/tela2.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tela 2</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/tela2.css">
 </head>
 <body>
-    
+    <header>
+        <div class="tela">
+            <h1>TREMzz</h1>
+        </div>    
+    </header>
+   
 </body>
 </html>
