--- a/html/tela11.html
+++ b/html/tela11.html
@@ -8,22 +8,39 @@
 </head>
 <body>
 
+    <div class="container">
+   
+        <header class="header">
+            <div class="back-button">&larr;</div>
+            <h1>Messages</h1>
+        </header>
 
+       
+        <div class="ilustracao">
+            <img src="../img/semconversa.png" alt="Ilustração de mensagens">
+        </div>
 
-
-
-
-
-
-
-
+      
+        <div class="message">
+            <h2>Vocês estão todos atualizados!</h2>
+            <p>Nenhuma mensagem nova disponível no momento, volte em breve para descobrir novas ofertas</p>
+        </div>
+    </div>
 
     <footer class="rodape">
-        <button><img src="../img/casa.png"></button>
 
-        <button><img src="../img/relogio.png"></button>
+        <a href="tela8.html">
+            <img src="../img/casa.png">
 
-        <button><img src="../img/relogio.png"></button>
+        <a href="tela6.html">
+            <img src="../img/lupa.png">
+
+        <a href="tela11.html">
+            <img src="../img/chat.png">    
+
+            <a href="tela9.html">
+                <img src="../img/perfil.png">   
+
     </footer>
 </body>
 </html>
