--- a/html/tela9.html
+++ b/html/tela9.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+
+
+
+
+
+
     
+    <footer class="rodape">
+
+        <a href="tela8.html">
+            <img src="../img/casa.png">
+
+        <a href="tela6.html">
+            <img src="../img/lupa.png">
+
+        <a href="tela11.html">
+            <img src="../img/chat.png">    
+
+            <a href="tela9.html">
+                <img src="../img/perfil.png">   
+
+    </footer>
 </body>
 </html>
