--- a/html/tela8.html
+++ b/html/tela8.html
@@ -18,8 +18,17 @@
 
             <nav class="tools">
                 <ul>
-
+                    <li><a> 
+                        <img src="../img/areabranca.png">
+                    </a></li>
+                    <li><a> 
+                        <img src="../img/internetbranca.png">
+                    </a></li>
+                    <li><a> 
+                        <img src="../img/bateriabranca.png">
+                    </a></li>
                 </ul>
+
             </nav>
         </div> <!-- menu-iphone-->
     </header>
