--- a/html/tela8.html
+++ b/html/tela8.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <div class="menu-iphone">
+            
             <div class="clock">
                 <a>
                     00:00
@@ -28,11 +29,25 @@
                         <img src="../img/bateriabranca.png">
                     </a></li>
                 </ul>
+            </nav> <!-- tools -->
 
-            </nav>
         </div> <!-- menu-iphone-->
     </header>
+
     <main>
+        
+        <div class="top">
+            <div class="hello">
+                <h1> Olá, Lucas </h1>
+            </div>
+            <div class="foto-perfil">
+              <a href="#">
+                <img src="../img/pfp.jpg">
+              </a>  
+            </div>
+        </div>
+
+        </div>
 
     </main>
     <footer>
