att-tela-registro

--- a/html/tela4.html
+++ b/html/tela4.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TremZZ</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/tela4.css">
+
+
 </head>
+<header> 
+    <h1> TremZZ </h1>
+
+</header>
 <body>
-    
+    <form>
+
+        <div class="registro">
+        <fieldset>
+            <legend> Registro </legend>
+            <label for="name"> Nome: </label> <input type="text" id="name" name="nome" required>
+            <p></p>
+            <label for="email"> E-mail: </label> <input type="text" id="email" name="email" required>
+            <p></p>
+            <label for="endereço"> Celular: </label> <input type="text" id="celular" name="celular" required>
+            <p></p>
+            <label for="telefone"> Senha: </label> <input type="text" id="senha" name="senha" required>
+            <p></p>
+            <label for="email"> Confirme sua senha: </label> <input type="text" id="confirsenha" name="confirsenha" required>
+            <p> </p>
+            <button> Registre-se </button>
+        </fieldset>
+
+        
+
+
+        <p> Faça login por outras plataformas:</p>
+
+        </div>
+
+        <div class="botaoFace">
+            <button> <img src="../img/facebook-logo-1-2.png" alt="FACEBOOK"> FACEBOOK </button>
+        </div>
+        <p> </p>
+        <div class="botaoGoogle">
+            <button><img src="../img/google-37.png" alt="GOOGLE"> GOOGLE </button>
+        </div>
+    </form>
 </body>
 </html>
