--- a/html/tela10.html
+++ b/html/tela10.html
@@ -16,8 +16,9 @@
         <br>
        <div class="info">
         <h3>Nome</h3>
-        <h0></h10>
+        <h5>Lucas Duarte</h5>
        </div>
+       
     </nav>
         
   
