--- a/html/tela10.html
+++ b/html/tela10.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Informações da Conta</title>
     <link rel="stylesheet" href="../css/tela10.css">
     
 </head>
@@ -16,7 +16,16 @@
         <br>
        <div class="info">
         <h3>Nome</h3>
-        <h5>Lucas Duarte</h5>
+        <h5>Lucas Leandro H.</h5>
+        <hr>
+        <br>
+        <h3>Telefone</h3>
+        <h5>+55 47 99969-6716</h5>
+        <hr>
+        <br>
+        <h3>E-mail</h3>
+        <h5>lucas_duarte2@estudante.sesisenai.org.br</h5>
+        <hr>
        </div>
        
     </nav>
