--- a/html/tela9.html
+++ b/html/tela9.html
@@ -8,7 +8,29 @@
 </head>
 <body>
 
+    <nav>
+        <img src="../img/perfil.png"><h3>Lucas</h3>
+        <br>
+       <div class="info">
+            <div class="perfil">
+             <a href="tela10.html"><h3>Perfil</h3></a>
+            </div>
 
+            <div class="resto">
+                 <br>
+                <h3>Mensagens</h3>
+            </div>
+
+           
+                <br>
+                 <h3>Pagamentos</h3>
+
+                <br>
+                <h3>Configurações</h3>
+            </div>
+       </div>
+       
+    </nav>
 
 
 
