--- a/html/tela9.html
+++ b/html/tela9.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/tela9.css">
 </head>
 <body>
-
+   
     <nav>
         <img src="../img/perfil.png"><h3>Lucas</h3>
         <br>
@@ -18,13 +18,15 @@
 
             <div class="resto">
                  <br>
-                <h3>Mensagens</h3>
+                <a href="tela11.html"><h3>Mensagens</h3></a>
             </div>
 
            
                 <br>
                  <h3>Pagamentos</h3>
 
+                <br>
+                <h3>Sobre </h3>
                 <br>
                 <h3>Configurações</h3>
             </div>
