--- a/html/tela9.html
+++ b/html/tela9.html
@@ -9,7 +9,7 @@
 <body>
    
     <nav>
-        <img src="../img/perfil.png"><h3>Lucas</h3>
+        <img src="../img/pfp.jpg"><h3>Lucas</h3>
         <br>
        <div class="info">
             <div class="perfil">
