att menu e href

--- a/html/tela11.html
+++ b/html/tela11.html
@@ -11,7 +11,8 @@
     <div class="container">
    
         <header class="header">
-            <div class="back-button">&larr;</div>
+                <a href="tela9.html"><div class="back-button">&larr;</div></a>
+            
             <h1>Mensagens</h1>
         </header>
 
