--- a/html/tela4.html
+++ b/html/tela4.html
@@ -39,12 +39,12 @@
 
         </div>
 
-        <div class="botaoFace">
-            <button> <img src="../img/facebook-logo-1-2.png" alt="FACEBOOK"> FACEBOOK </button>
-        </div>
+        <div class="botaooo"> 
+            <button class="botao-azul"> <img src="../img/facebook-logo-1-2.png" alt="FACEBOOK"> FACEBOOK </button>
+       
         <p> </p>
-        <div class="botaoGoogle">
-            <button><img src="../img/google-37.png" alt="GOOGLE"> GOOGLE </button>
+        
+            <button class="botao-branco"><img src="../img/google-37.png" alt="GOOGLE"> GOOGLE </button>
         </div>
     </form>
 </body>
