--- a/html/tela4.html
+++ b/html/tela4.html
@@ -29,7 +29,7 @@
             <p></p>
             <label for="email"> Confirme sua senha: </label> <input type="text" id="confirsenha" name="confirsenha" required>
             <p> </p>
-            <button> Registre-se </button>
+            <input type="submit" value="Registro" />
         </fieldset>
 
         
