--- a/html/tela8.html
+++ b/html/tela8.html
@@ -21,7 +21,11 @@
                     </div>
             </div>
         </nav>
-        
+        <div class="searchbar">
+            <span>
+                Para onde voce vai?
+            </span>
+        </div>     
     </header>
 
     <main>
