--- a/html/tela10.html
+++ b/html/tela10.html
@@ -16,7 +16,7 @@
         <br>
        <div class="info">
         <h3>Nome</h3>
-        <h5>Lucas Leandro H.</h5>
+        <h5>Lukinhas Duarte</h5>
         <hr>
         <br>
         <h3>Telefone</h3>
