tela de carregamento

--- a/html/tela2.html
+++ b/html/tela2.html
@@ -13,11 +13,16 @@
     <!-- fim fonte -->
 </head>
 <body>
+
     <header>
         <div class="tela">
             <h1>TREMzz</h1>
         </div>    
     </header>
    
+<div class="loader">
+    
+</div>
+
 </body>
 </html>
