--- a/html/tela8.html
+++ b/html/tela8.html
@@ -22,9 +22,14 @@
             </div>
         </nav>
         <div class="searchbar">
-            <span>
-                Para onde voce vai?
-            </span>
+            <div class="text-bar">
+                <span>
+                    Para onde voce vai?
+                </span>
+            </div>
+            <img-bar>
+                <img src="">
+            </img-bar>
         </div>     
     </header>
 
