--- a/html/tela6.html
+++ b/html/tela6.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <title>Select Location</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/tela6.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <h1>Selecione sua localização </h1>
+        <input type="text" />
+        <p> </p>
+        <div class="save-as-section">
+            <h2>Save As</h2>
+            <div class="location-options">
+                <button class="location-btn">Home</button>
+                <button class="location-btn">Office</button>
+            </div>
+        </div>
+
+        <div class="others-section">
+            <h2>Others</h2>
+
+        </div>
+
+        <button class="save-btn">Save Address</button>
+    </div>
 </body>
+
 </html>
