--- a/html/tela4.html
+++ b/html/tela4.html
@@ -40,11 +40,11 @@
         </div>
 
         <div class="botaooo"> 
-            <button class="botao-azul"> <img src="../img/facebook-logo-1-2.png" alt="FACEBOOK"> FACEBOOK </button>
+            <button class="botao-azul"> <img src="../img/logofacebook.png" alt="FACEBOOK"> FACEBOOK </button>
        
         <p> </p>
         
-            <button class="botao-branco"><img src="../img/google-37.png" alt="GOOGLE"> GOOGLE </button>
+            <button class="botao-branco"><img src="../img/logogoogle.png" alt="GOOGLE"> GOOGLE </button>
         </div>
     </form>
 </body>
