att main tela 8

--- a/html/tela8.html
+++ b/html/tela8.html
@@ -15,10 +15,10 @@
             <div class="top">
                     <div class="text-oi">
                         <h1> Olá, Lucas </h1>
-                    </div>
+                    </div> <!-- text-oi -->
                     <div class="pfp">
                         <img src="../img/pfp.jpg">
-                    </div>
+                    </div> <!-- pfp -->
             </div>
         </nav>
         <div class="searchbar">
@@ -26,36 +26,57 @@
                 <span>
                     Para onde voce vai?
                 </span>
-            </div>
-            <img-bar>
-                <img src="">
-            </img-bar>
-        </div>     
+            </div> <!-- text-bar -->
+            <div class=img-bar>
+                <img src="../img/lupa.png">
+            </div> <!-- img-bar -->
+        </div> <!-- searchbar-->    
     </header>
 
     <main>
+        <div class="atividade">
+            <div class="ult-atividade">
+                <span> Últimas atividades </span>
+            </div> <!-- ult -atividade -->
+            <div class="card-atividade">
+                <div class="card-img">
 
+                </div>
+                <div class="card-text">
+                    <div class="card-titulo">
+                        Estação da Luz
+                    </div>
+                    <div class="card-local">
+                        Centro Histórico de São Paulo, São Paulo - SP
+                    </div>
+                </div>
+            </div> <!-- card-atividade -->
+            <div class="card-atividade">
+                
+            </div> <!-- card-atividade -->
+        </div> <!-- atividade -->
     </main>
 
-    <footer class="rodape">
-        <a href="tela8.html">
-            <img src="../img/casa.png">
-        </a>  
+    <footer>
+        <div class="rodape">
+            <a href="tela8.html">
+                <img src="../img/casa.png">
+            </a>  
 
-        <a href="tela6.html">
-            <img src="../img/lupa.png">
-        </a>  
+            <a href="tela6.html">
+                <img src="../img/lupa.png">
+            </a>  
 
-        <a href="tela11.html">
-            <img src="../img/chat.png">   
-        </a>   
+            <a href="tela11.html">
+                <img src="../img/chat.png">   
+            </a>   
 
             <a href="tela9.html">
                 <img src="../img/perfil.png">   
             </a>  
-
-
+        </div>
     </footer>
+
 </body>
 
 </html>
