tela-pa-davibritto

--- a/html/tela4.html
+++ b/html/tela4.html
@@ -51,8 +51,8 @@
     </form>
     <p></p>
     <div class="login">
-        <a> Já tem uma conta?</a> <br>
-        <a href="https://www.adorocinema.com/filmes/filme-1000002737/"> Login </a>
+        <span> Já tem uma conta?</span> <br>
+        <a href="../html/tela5.html"> Login </a>
     </div>
 </body>
 
