--- a/html/tela5.html
+++ b/html/tela5.html
@@ -18,10 +18,10 @@
 
         <div class="registro">
         <fieldset>
-            <label for="email"> E-mail: </label> <input type="text" id="email" name="email" required>
+            <label for="email"> E-mail: </label> <input type="text" id="email" name="email" >
             <p></p>
             
-            <label for="senha"> Senha: </label> <input type="text" id="senha" name="senha" required>
+            <label for="senha"> Senha: </label> <input type="text" id="senha" name="senha">
             <p></p>
             
             <input type="submit" value="Login" />
@@ -42,5 +42,11 @@
             <button class="botao-branco"><img src="../img/logogoogle.png" alt="GOOGLE"> GOOGLE </button>
         </div>
     </form>
+
+    <div class="login">
+        <span>Não tem uma conta ainda?</span> <br>
+        <a href="../html/tela4.html"> Registre-se </a>
+    </div>
+
 </body>
 </html>
