ajuste tela 2 e 3 fonte

--- a/html/tela3.html
+++ b/html/tela3.html
@@ -7,6 +7,11 @@
     <title>TREMzz</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/tela3.css">
+    <!--inicio fonte-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+    <!-- fim fonte -->
 </head>
 
 <body>
