att link Poppins

--- a/html/tela8.html
+++ b/html/tela8.html
@@ -7,6 +7,11 @@
     <title>Tela 8</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/tela8.css">
+    <!-- fonte -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- fim fonte -->
 </head>
 
 <body>
@@ -34,13 +39,14 @@
     </header>
 
     <main>
+        
         <div class="atividade">
             <div class="ult-atividade">
                 <span> Últimas atividades </span>
             </div> <!-- ult -atividade -->
             <div class="card-atividade">
                 <div class="card-img">
-
+                    <img src="../img/local.png">
                 </div>
                 <div class="card-text">
                     <div class="card-titulo">
@@ -50,11 +56,39 @@
                         Centro Histórico de São Paulo, São Paulo - SP
                     </div>
                 </div>
+                <hr>
             </div> <!-- card-atividade -->
             <div class="card-atividade">
-                
+                <div class="card-img">
+                    <img src="../img/local.png">
+                </div>
+                <div class="card-text">
+                    <div class="card-titulo">
+                        Estação do Brás
+                    </div>
+                    <div class="card-local">
+                        Brás, São Paulo - SP
+                    </div>
+                </div>
             </div> <!-- card-atividade -->
         </div> <!-- atividade -->
+
+        <div class="servicos">
+            <div class="servicos-titulo">
+                <h3> Outros serviços</h3>
+            </div>
+            <div class="servicos-cards">
+                <div class="card-servico">
+                    <span> Alertas em tempo real </span>
+                </div>
+                <div class="card-servico">
+                    <span> Status do meu trem </span>
+                </div>
+                <div class="card-servico">
+                    <span> Horários do meu embarque </span>
+                </div>
+            </div> <!-- servicos-cards-->
+        </div> <!-- servicos -->
     </main>
 
     <footer>
