--- a/html/tela3.html
+++ b/html/tela3.html
@@ -27,13 +27,13 @@
 
         <div class="login">
         <button>
-             <a>Entrar na minha conta </a>  
+             <a href="tela5.html">Entrar na minha conta</a>
         </button>
         </div>
 
         <div class="login-2">
             <button>
-                <a>Registrar-se </a>  
+                <a href="tela4.html">Registre-se</a>
            </button>
 
 
