--- a/html/tela4.html
+++ b/html/tela4.html
@@ -42,11 +42,11 @@
         </div>
 
         <div class="botaooo">
-            <button class="botao-azul"> <img src="../img/logofacebook.png" alt="FACEBOOK"> FACEBOOK </button>
+            <button class="botao-azul"> <img src="../img/logofacebook.png"> <a>FACEBOOK </a> </button>
 
             <p> </p>
 
-            <button class="botao-branco"><img src="../img/logogoogle.png" alt="GOOGLE"> GOOGLE </button>
+            <button class="botao-branco"><img src="../img/logogoogle.png"> GOOGLE </button>
         </div>
     </form>
     <p></p>
