--- a/html/tela1.html
+++ b/html/tela1.html
@@ -14,18 +14,21 @@
     <!-- fim fonte -->
 </head>
 <body>
-    <div class="splash-screen">
-        <h1></h1>
-    </div>
+    <div class="container">
+        <div class="train">
+            <img src="../img/tremtela1.png">
+        </div>
     <script src="../js/main.js"></script>
 
     <script >
-
-        setTimeout(function () {
+ document.addEventListener("DOMContentLoaded", function () {
+    setTimeout(() => {
             
             window.location.href = "tela2.html"
         
         }, 3000);
+    }, 4000);
+
 
     </script>
 
