--- a/html/tela3.html
+++ b/html/tela3.html
@@ -10,12 +10,14 @@
     <!-- fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <!-- fim fonte -->
     <!--inicio fonte-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <!-- fim fonte -->
 </head>
 
@@ -26,22 +28,24 @@
         </div>
 
         <div class="layout">
-            <h1>A melhor rota para melhorar a sua rotina</h1>
+            <h1>A melhor rota para o seu dia</h1>
         </div>
 
+        <div class="logins">
 
-        <div class="login">
-        <button>
-             <a href="tela5.html">Entrar na minha conta</a>
-        </button>
-        </div>
+            <div class="login">
+                <button>
+                    <a href="tela5.html">Entrar na minha conta</a>
+                </button>
+            </div>
 
-        <div class="login-2">
-            <button>
-                <a href="tela4.html">Registre-se</a>
-           </button>
+            <div class="login-2">
+                <button>
+                    <a href="tela4.html">Registre-se</a>
+                </button>
 
 
+            </div>
         </div>
 
     </header>
