--- a/html/tela8.html
+++ b/html/tela8.html
@@ -50,13 +50,12 @@
                 </div>
                 <div class="card-text">
                     <div class="card-titulo">
-                        Estação da Luz
+                        <a>Estação da Luz</a>
                     </div>
                     <div class="card-local">
-                        Centro Histórico de São Paulo, São Paulo - SP
+                        <span>Centro Histórico de São Paulo, São Paulo - SP</span>
                     </div>
                 </div>
-                <hr>
             </div> <!-- card-atividade -->
             <div class="card-atividade">
                 <div class="card-img">
@@ -64,10 +63,10 @@
                 </div>
                 <div class="card-text">
                     <div class="card-titulo">
-                        Estação do Brás
+                        <a>Estação do Brás</a>
                     </div>
-                    <div class="card-local">
-                        Brás, São Paulo - SP
+                    <div class="card-endereco">
+                        <span>Brás, São Paulo - SP</span>
                     </div>
                 </div>
             </div> <!-- card-atividade -->
