--- a/html/tela4.html
+++ b/html/tela4.html
@@ -38,14 +38,14 @@
             </div>
         </form>
 
-        <div class="social-login">
+        <div class="login">
             <p>Faça login por outras plataformas:</p>
             <div class="social-buttons">
                 <button class="social-btn google">
-                    <i class="fab fa-google"></i> Google
+                     <a>Google</a>
                 </button>
                 <button class="social-btn facebook">
-                    <i class="fab fa-facebook-f"></i> Facebook
+                     <a>Facebook</a>
                 </button>
             </div>
         </div>
