--- a/html/tela1.html
+++ b/html/tela1.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abertura</title>
+    <title>TREMzz - Iniciando</title>
     <link rel="stylesheet" href="../css/tela1.css">
     <title> TREMzz </title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/tremlogo.png">
     <!-- fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
