--- a/html/tela4.html
+++ b/html/tela4.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TremZZ</title>
+    <title>TREMzz - Registre-se</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/tela4.css">
+    <link rel="shortcut icon" href="../img/tremlogo.png">
     <!-- Fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +16,7 @@
 </head>
 <body>
     <header>
-        <h1>TremZZ</h1>
+        <h1>TREMzz</h1>
     </header>
 
     <main>
