--- a/html/tela5.html
+++ b/html/tela5.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TremZZ</title>
+    <title>TREMzz - Login</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/tela5.css">
+    <link rel="shortcut icon" href="../img/tremlogo.png">
     <!-- fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +25,7 @@
         <form>
             <div class="registro">
                 <fieldset>
-                    <legend>Registro</legend>
+                    <legend>Faça o Login:</legend>
                     <input type="email" id="email" name="email" placeholder="E-mail" required>
                     <br>
                     <input type="password" id="senha" name="senha" placeholder="Senha" required>
