--- a/html/tela6.html
+++ b/html/tela6.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Localização</title>
+    <title>TREMzz - Localização</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../css/tela6.css">
+    <link rel="shortcut icon" href="../img/tremlogo.png">
     <!-- fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
