--- a/html/tela9.html
+++ b/html/tela9.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TREMzz - Perfil</title>
     <link rel="stylesheet" href="../css/tela9.css">
+    <link rel="shortcut icon" href="../img/tremlogo.png">
     <!-- fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
