--- a/html/tela7.html
+++ b/html/tela7.html
@@ -1,18 +1,59 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TREMzz - Rotas</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/tela7.css">
     <link rel="shortcut icon" href="../img/tremlogo.png">
-    <!-- fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <!-- fim fonte -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
-    
+
+    <div class="container">
+
+        <h1>Order Tracking</h1>
+
+        <div class="pedidos">
+            <img src="../img/cavalo.jpg" alt="Cameron Williamson" />
+
+            <div class="entregador">
+                <p class="nome">Cameron Williamson</p>
+                <p class="cargo">Delivery Man</p>
+            </div>
+        </div>
+
+        <hr />
+
+        <div class="endereco">
+            <div class="local">
+
+                <div>
+                    <p class="rua">Endereço de Entrega</p>
+                    <p class="horario">2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
+                </div>
+            </div>
+
+            <div class="local">
+
+                <div>
+                    <p class="rua">Horário de Entrega</p>
+                    <p class="horario">03.00PM (Máx 20 min)</p>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
 </body>
+
 </html>
