--- a/html/tela8.html
+++ b/html/tela8.html
@@ -110,24 +110,21 @@
         </div> <!-- servicos -->
     </main>
 
-    <footer>
-        <div class="rodape">
-            <a href="tela8.html">
-                <img src="../img/casa.png">
-            </a>
+    <footer class="rodape">
+
+        <a href="tela8.html">
+            <img src="../img/casa.png">
 
             <a href="tela6.html">
                 <img src="../img/lupa.png">
-            </a>
 
-            <a href="tela11.html">
-                <img src="../img/chat.png">
-            </a>
+                <a href="tela11.html">
+                    <img src="../img/chat.png">
 
-            <a href="tela9.html">
-                <img src="../img/perfil.png">
-            </a>
-        </div>
+                    <a href="tela9.html">
+                        <img src="../img/perfil.png">
+
+
     </footer>
 
 </body>
