--- a/html/tela8.html
+++ b/html/tela8.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="card-text">
                     <div class="card-titulo">
-                        <a>Estação Japão-Liberdade</a>
+                        <a>Estação Japão</a>
                     </div>
                     <div class="card-endereco">
                         <span> Bairro da liberdade </span> <br>
@@ -84,7 +84,7 @@
             <div class="servicos-cards">
                 <div class="card-servico">
                     <div class="servico-img">
-                        <img src="">
+                        <img src="../img/alerta.png">
                     </div>
                     <div class="servico-text">
                         <span> Alertas em tempo real </span>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="card-servico">
                     <div class="servico-img">
-                        <img src="">
+                        <img src="../img/trem.png">
                     </div>
                     <div class="servico-text">
                         <span> Status do meu trem </span>
@@ -100,10 +100,10 @@
                 </div>
                 <div class="card-servico">
                     <div class="servico-img">
-                        <img src="">
+                        <img src="../img/relogio.png">
                     </div>
                     <div class="servico-text">
-                        <span> Horários do meu embarque </span>
+                        <span> Horários  de  embarque </span>
                     </div>
                 </div>
             </div> <!-- servicos-cards-->
