--- a/html/tela7.html
+++ b/html/tela7.html
@@ -22,14 +22,14 @@
 
     <div class="container">
 
-        <h1>Order Tracking</h1>
+        <h1>TREMzz</h1>
 
         <div class="pedidos">
-            <img src="../img/cavalo.jpg" alt="Cameron Williamson" />
+            <img src="../img/cavalo.jpg" alt="entregador" />
 
             <div class="entregador">
-                <p class="nome">Cameron Williamson</p>
-                <p class="cargo">Delivery Man</p>
+                <p class="nome">Lucas Hemkemeier</p>
+                <p class="cargo">Passageiro</p>
             </div>
         </div>
 
@@ -39,16 +39,16 @@
             <div class="local">
 
                 <div>
-                    <p class="rua">Endereço de Entrega</p>
-                    <p class="horario">2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
+                    <p class="rua">Endereço Atual</p>
+                    <p class="horario">R. Urussanga, 138 - Bucarein, Joinville - SC</p>
                 </div>
             </div>
 
             <div class="local">
 
                 <div>
-                    <p class="rua">Horário de Entrega</p>
-                    <p class="horario">03.00PM (Máx 20 min)</p>
+                    <p class="rua">Horário de embarque</p>
+                    <p class="horario">13:00 (Máx 20 min)</p>
                 </div>
             </div>
         </div>
