--- a/html/tela7.html
+++ b/html/tela7.html
@@ -20,23 +20,32 @@
 
 <body>
 
+    <div class="mapBox">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.5756836664464!2d-48.84117912403811!3d-26.30785216820438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94deb187e1aad16f%3A0xef9a7e18b1d0e8e9!2sEscola%20SESI%20de%20Refer%C3%AAncia%20Joinville!5e0!3m2!1spt-BR!2sbr!4v1747827852135!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     <div class="container">
 
-        <h1>TREMzz</h1>
+
+        <h1>Status Embarque</h1>
+
 
         <div class="pedidos">
-            <img src="../img/cavalo.jpg" alt="entregador" />
+            <img src="../img/cavalo.jpg" alt="usuario" />
 
-            <div class="entregador">
+
+            <div class="usuario">
                 <p class="nome">Lucas Hemkemeier</p>
                 <p class="cargo">Passageiro</p>
             </div>
         </div>
 
+
         <hr />
+
 
         <div class="endereco">
             <div class="local">
+
 
                 <div>
                     <p class="rua">Endereço Atual</p>
@@ -44,7 +53,9 @@
                 </div>
             </div>
 
+
             <div class="local">
+
 
                 <div>
                     <p class="rua">Horário de embarque</p>
@@ -53,6 +64,7 @@
             </div>
         </div>
     </div>
+
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
