--- a/html/tela7.html
+++ b/html/tela7.html
@@ -30,13 +30,14 @@
 
 
         <div class="pedidos">
-            <img src="../img/cavalo.jpg" alt="usuario" />
+            <img src="../img/cavalo.jpg" alt="imagem" />
 
 
             <div class="usuario">
                 <p class="nome">Lucas Hemkemeier</p>
                 <p class="cargo">Passageiro</p>
             </div>
+            
         </div>
 
 
