--- a/html/tela6.html
+++ b/html/tela6.html
@@ -13,7 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- fim fonte -->
 </head>
+
 <body>
+        
     <div class="container">
         <h1>Selecione um endereço</h1>
         
@@ -43,4 +45,19 @@
         <button class="save-btn"> Calcular Rota </button>
     </div>
 </body>
+
+<footer class="rodape">
+        <a href="tela8.html">
+            <img src="../img/casa.png">
+
+        <a href="tela6.html">
+            <img src="../img/lupa.png">
+
+        <a href="tela11.html">
+            <img src="../img/chat.png">
+
+        <a href="tela9.html">
+            <img src="../img/perfil.png">
+    </footer>
+
 </html>
