--- a/html/tela8.html
+++ b/html/tela8.html
@@ -111,18 +111,11 @@
     </main>
 
     <footer class="rodape">
-        <a href="tela8.html">
-            <img src="../img/casa.png">
-
-        <a href="tela6.html">
-            <img src="../img/lupa.png">
-
-        <a href="tela11.html">
-            <img src="../img/chat.png">
-
-        <a href="tela9.html">
-            <img src="../img/perfil.png">
-    </footer>
+    <a href="tela8.html"><img src="../img/casa.png" alt="Início"></a>
+    <a href="tela6.html"><img src="../img/lupa.png" alt="Buscar"></a>
+    <a href="tela11.html"><img src="../img/chat.png" alt="Chat"></a>
+    <a href="tela9.html"><img src="../img/perfil.png" alt="Perfil"></a>
+</footer>
 
 </body>
 </html>
