tela-adicionar-endereço

--- a/html/tela6.html
+++ b/html/tela6.html
@@ -43,6 +43,7 @@
             <div class="butao">
                 <img src="../img/adicionar.png"> 
                 <span>Salve mais endereços</span>
+                <a href="../html/enderecos.html"></a>
             </div>
         </button>
         </div>
