--- a/html/enderecos.html
+++ b/html/enderecos.html
@@ -38,7 +38,7 @@
         </div> <!-- ult -atividade -->
         <div class="card-atividade">
             <div class="card-img">
-                <img src="../img/local.png">
+                <img src="../img/localizacao.png">
             </div>
             <div class="card-text">
                 <div class="card-titulo">
@@ -53,7 +53,7 @@
 
         <div class="card-atividade">
             <div class="card-img">
-                <img src="../img/local.png">
+                <img src="../img/localizacao.png">
             </div>
             <div class="card-text">
                 <div class="card-titulo">
