--- a/html/tela6.html
+++ b/html/tela6.html
@@ -42,7 +42,7 @@
             <button class="location-btn">
             <div class="butao">
                 <img src="../img/adicionar.png"> 
-                <span>Salve mais endereços</span>
+                <a href="../html/enderecos.html">Salve mais endereços</a>
             </div>
         </button>
         </div>
