--- a/html/tela9.html
+++ b/html/tela9.html
@@ -23,18 +23,10 @@
         <h3>Lucas</h3>
         <br>
         <div class="info">
-            <div class="perfil">
-                <a href="tela10.html">
-                    <h3>Perfil</h3>
-                </a>
-            </div>
-
             <div class="resto">
-                <br>
-                <a href="tela11.html">
-                    <h3> Mensagens </h3>
-                </a>
-
+                <br> <a href="tela10.html">
+                    <h3>Perfil</h3>
+                </a>  
                 <br>
                 <a href="tela11.html">
                     <h3> Pagamentos </h3>
