--- a/html/tela7.html
+++ b/html/tela7.html
@@ -30,7 +30,7 @@
 
 
         <div class="pedidos">
-            <img src="../img/cavalo.jpg" alt="imagem" />
+            <img src="../img/pfp.jpg" alt="imagem" />
 
 
             <div class="usuario">
