--- a/html/tela4.html
+++ b/html/tela4.html
@@ -34,7 +34,7 @@
                     <br>
                     <input type="password" id="confirmar_senha" name="confirmar_senha" placeholder="Confirmar Senha" required>
                     <br>
-                    <input type="submit" value="Registre-se">
+                    <input type="submit" value="Registre-se" href="tela8.html">
                 </fieldset>
             </div>
         </form>
