menu adm dashboard

--- a/html/menuadm.html
+++ b/html/menuadm.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,10 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;
-    1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- fim fonte -->
 </head>
+
 <body>
     <header>
         <div class="top">
@@ -24,14 +25,40 @@
     </header>
 
     <main>
+        <section class="cards">
+            <div class="card">
+                <div class="card-icon">🚆</div>
+                <div class="card-number">12</div>
+                <div class="card-text">Trens ativos neste momento</div>
+            </div>
+            <div class="card">
+                <div class="card-icon">⚠️</div>
+                <div class="card-number">3</div>
+                <div class="card-text">Linhas com atrasos</div>
+            </div>
+            <div class="card">
+                <div class="card-icon">👥</div>
+                <div class="card-number">1.245</div>
+                <div class="card-text">Passageiros conectados agora</div>
+            </div>
+            <div class="card">
+                <div class="card-icon">💰</div>
+                <div class="card-number">R$ 18.500,00</div>
+                <div class="card-text">Faturamento hoje</div>
+            </div>
+        </section>
 
+        <section class="incidentes">
+            <h2>Últimos Incidentes</h2>
+            <div class="incidente-item"> <span>⚠️ Trem 102 atrasado - Linha Verde - 15 min </span> </div>
+            <div class="incidente-item"> <span>🔧 Manutenção programada na Estação Central - 22:00h </span> </div>
+            <div class="incidente-item"> <span>❌ Cancelamento do trem 55 - Linha Azul </span> </div>
+        </section>
     </main>
 
-<footer class="rodape">
-    <a href="tela8.html"><img src="../img/casa.png" alt="Início"></a>
-    <a href="tela6.html"><img src="../img/lupa.png" alt="Buscar"></a>
-    <a href="tela11.html"><img src="../img/chat.png" alt="Chat"></a>
-    <a href="tela9.html"><img src="../img/perfil.png" alt="Perfil"></a> 
-</footer> 
+    <footer>
+
+    </footer>
 </body>
+
 </html>
