--- a/html/tela6.html
+++ b/html/tela6.html
@@ -47,7 +47,7 @@
         </button>
         </div>
         
-        <button class="save-btn"> Calcular Rota </button>
+        <button class="save-btn"> <a href="../html/tela7.html"> Mostrar Rota</a> </button>
     </div>
 </body>
 
