att botao funcional

--- a/html/tela4.html
+++ b/html/tela4.html
@@ -24,17 +24,22 @@
             <div class="registro">
                 <fieldset>
                     <legend>Registro</legend>
-                    <input type="text" id="nome" name="nome" placeholder="Nome" required>
+                    <input type="text" id="nome" name="nome" placeholder="Nome">
                     <br>
-                    <input type="email" id="email" name="email" placeholder="E-mail" required>
+                    <input type="email" id="email" name="email" placeholder="E-mail">
                     <br>
-                    <input type="tel" id="telefone" name="telefone" placeholder="Telefone" required>
+                    <input type="tel" id="telefone" name="telefone" placeholder="Telefone">
                     <br>
-                    <input type="password" id="senha" name="senha" placeholder="Senha" required>
+                    <input type="password" id="senha" name="senha" placeholder="Senha">
                     <br>
-                    <input type="password" id="confirmar_senha" name="confirmar_senha" placeholder="Confirmar Senha" required>
+                    <input type="password" id="senha" name="confirmar_senha" placeholder="Confirmar Senha">
                     <br>
-                    <input type="submit" value="Registre-se" href="tela8.html">
+
+                    <div class="registrar-se">
+                        <button>
+                        <a href="tela8.html">Registrar-se</a>
+                        </button>
+                    </div>
                 </fieldset>
             </div>
         </form>
