--- a/html/tela7.html
+++ b/html/tela7.html
@@ -30,7 +30,7 @@
 
 
         <div class="pedidos">
-            <img src="../img/pfp.jpg" alt="imagem" />
+            <img src="../img/rodinei.jpeg" alt="imagem" />
 
 
             <div class="usuario">
@@ -71,6 +71,4 @@
      crossorigin=""></script>
      <script href="../js/main.js"></script>
 </body>
-
-
 </html>
