att responsive incidentes

--- a/html/menuadm.html
+++ b/html/menuadm.html
@@ -50,9 +50,9 @@
 
         <section class="incidentes">
             <h2>Últimos Incidentes</h2>
-            <div class="incidente-item"> <span>⚠️ Trem 102 atrasado - Linha Verde - 15 min </span> </div>
+            <div class="incidente-item"> <span>⚠️ Trem 102 atrasado - <a class="linhaVerde"> Linha Verde </a> - 15 min </span> </div>
             <div class="incidente-item"> <span>🔧 Manutenção programada na Estação Central - 22:00h </span> </div>
-            <div class="incidente-item"> <span>❌ Cancelamento do trem 55 - Linha Azul </span> </div>
+            <div class="incidente-item"> <span>❌ Cancelamento do trem 55 - <a class="linhaAzul"> Linha Azul </a> </span> </div>
         </section>
     </main>
 
